src/testFunctional/testData/org/intellij/xquery/parser/errors/IncompleteFunctionName.xq
module namespace IncompleteFunctionName = "IncompleteFunctionName";

declare function IncompleteFunctionName:() {
    ()
};
